[tool.poetry]
name = "simple_queue_wrapper"
version = "0.1.0"
description = ""
authors = ["Guilherme Guedes <guilhermelgs@hotmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.4.2"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
