[tool.poetry]
name = "simple_queue_wrapper"
version = "0.0.1"
description = "Simple lib for integrate with queue brokers"
authors = ["Guilherme Guedes <guilhermelgs@hotmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.57"
pika = "^1.3.2"
botocore = "^1.31.57"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"
load-dotenv = "^0.1.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.4.2"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ "src" ]
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length=79

[tool.taskipy.tasks]
lint = "blue --check --diff . & isort --check -diff ."
format = "blue . & isort ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=src -vv"
post_test = "coverage html"